--- a/includes/header.html
+++ b/includes/header.html
@@ -23,6 +23,9 @@
     document.write(today);
   //-->
 </script>
+<span id="logout">
+	<roundcube:button command="logout" label="logout" class="button-logout" />
+</span>
 </div>
 <roundcube:container name="tabs" id="tabsbar" />
 <roundcube:object name="message" id="message" />
